--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -15,6 +15,7 @@ anyio==4.9.0
 attrs==25.3.0
     # via
     #   -r requirements.txt
+    #   jsonschema
     #   referencing
 babel==2.17.0
     # via
@@ -23,11 +24,11 @@ babel==2.17.0
     #   sphinx-intl
 black==25.1.0
     # via -r requirements_dev.in
-certifi==2025.6.15
+certifi==2025.8.3
     # via
     #   -r requirements.txt
     #   requests
-charset-normalizer==3.4.2
+charset-normalizer==3.4.3
     # via
     #   -r requirements.txt
     #   requests
@@ -49,7 +50,7 @@ docutils==0.21.2
     #   sphinxcontrib-opendataservices-jsonschema
 h11==0.16.0
     # via uvicorn
-iati-sphinx-theme==3.0.0
+iati-sphinx-theme==3.1.0
     # via -r requirements.txt
 idna==3.10
     # via
@@ -65,6 +66,7 @@ jinja2==3.1.6
     #   -r requirements.txt
     #   myst-parser
     #   sphinx
+    #   sphinxcontrib-redoc
 jscc==0.3.0
     # via
     #   -r requirements.txt
@@ -83,6 +85,14 @@ jsonref==1.1.0
     #   -r requirements.txt
     #   jscc
     #   sphinxcontrib-opendataservices-jsonschema
+jsonschema==4.25.1
+    # via
+    #   -r requirements.txt
+    #   sphinxcontrib-redoc
+jsonschema-specifications==2025.9.1
+    # via
+    #   -r requirements.txt
+    #   jsonschema
 markdown-it-py==3.0.0
     # via
     #   -r requirements.txt
@@ -92,7 +102,7 @@ markupsafe==3.0.2
     # via
     #   -r requirements.txt
     #   jinja2
-mdit-py-plugins==0.4.2
+mdit-py-plugins==0.5.0
     # via
     #   -r requirements.txt
     #   myst-parser
@@ -124,11 +134,14 @@ pyyaml==6.0.2
     # via
     #   -r requirements.txt
     #   myst-parser
+    #   sphinxcontrib-redoc
 referencing==0.36.2
     # via
     #   -r requirements.txt
+    #   jsonschema
+    #   jsonschema-specifications
     #   sphinxcontrib-opendataservices-jsonschema
-requests==2.32.4
+requests==2.32.5
     # via
     #   -r requirements.txt
     #   jscc
@@ -137,10 +150,15 @@ roman-numerals-py==3.1.0
     # via
     #   -r requirements.txt
     #   sphinx
-rpds-py==0.25.1
+rpds-py==0.27.1
     # via
     #   -r requirements.txt
+    #   jsonschema
     #   referencing
+six==1.17.0
+    # via
+    #   -r requirements.txt
+    #   sphinxcontrib-redoc
 sniffio==1.3.1
     # via anyio
 snowballstemmer==3.0.1
@@ -155,9 +173,10 @@ sphinx==8.2.3
     #   sphinx-intl
     #   sphinx-togglebutton
     #   sphinxcontrib-opendataservices
+    #   sphinxcontrib-redoc
 sphinx-autobuild==2024.10.3
     # via -r requirements_dev.in
-sphinx-intl==2.3.1
+sphinx-intl==2.3.2
     # via -r requirements.txt
 sphinx-togglebutton==0.3.2
     # via -r requirements.txt
@@ -187,6 +206,8 @@ sphinxcontrib-qthelp==2.0.0
     # via
     #   -r requirements.txt
     #   sphinx
+sphinxcontrib-redoc==1.6.0
+    # via -r requirements.txt
 sphinxcontrib-serializinghtml==2.0.0
     # via
     #   -r requirements.txt
