--- a/docs/specifications/iati-register-your-data-api.yaml
+++ b/docs/specifications/iati-register-your-data-api.yaml
@@ -54,10 +54,9 @@ info:
   license:
     name: GNU Affero General Public Licence 3.0
     url: "https://www.gnu.org/licenses/agpl-3.0.en.html"
-  version: 0.9.1
+  version: 0.9.2
 servers:
-  - url: "https://registry.iatistandard.org/api/v1"
-  - url: "https://dev.registry.iatistandard.org/api/v1"
+  - url: "https://dev.api.registeryourdata.iatistandard.org/api/v1"
 # ===============================================================
 #
 # Endpoints
