--- a/docs/specifications/iati-register-your-data-api.yaml
+++ b/docs/specifications/iati-register-your-data-api.yaml
@@ -54,7 +54,7 @@ info:
   license:
     name: GNU Affero General Public Licence 3.0
     url: "https://www.gnu.org/licenses/agpl-3.0.en.html"
-  version: 0.9.3
+  version: 0.9.4
 servers:
   - url: "https://dev.api.registeryourdata.iatistandard.org/api/v1"
 # ===============================================================
@@ -1155,6 +1155,9 @@ components:
         changed.
       type: object
       properties:
+        human_readable_name:
+          type: string
+          example: Aid Agency - Activity File 3
         short_name:
           type: string
           example: aidagcy-activity-3
